--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -71,7 +71,7 @@
             <canvas id="canvas"></canvas>
             <p>You're looking  <span id="happiness"></span></p>
 
-            <img id="myImg" src="sad.jpeg" width="100px">
+            <img id="myImg" src="sad.jpeg" width="100px" style="display:none;">
 
         </div>
     </div>
