--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -184,6 +184,8 @@
             tracksPoolWithValence[i].name = tracksPool[i].name;
         }
 
+        console.log("just assigned names")
+
 
 
            
@@ -256,7 +258,7 @@
 
     
 
-        tracksPoolWithValence.sort(compareSongs);
+        //tracksPoolWithValence.sort(compareSongs);
 
     }
    // face();
