--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -68,10 +68,14 @@
                 </div>
                 <button id="snappicButton" onclick="takepicParent()"><h3 style="display:inline-block">snap picture</h3><img src="camsvg.svg" style="margin-left:10px;vertical-align:middle;" width="30px"></button>
             </div>
+            <div id="canvasPlusHappiness">
             <canvas id="canvas"></canvas>
-            <p>You're looking  <span id="happiness"></span></p>
+            <div id="howyourelooking">
+                <p>You're looking  <span id="happiness"></span></p>
+            </div>
+        </div>
 
-            <img id="myImg" src="sad.jpeg" width="100px" style="display:none;">
+            
 
         </div>
     </div>
@@ -82,6 +86,9 @@
 <h1>How it works</h1>
 <p>Explain the tech very briefly</p>
 
+
+
+<img id="myImg" src="sad.jpeg" width="100px" style="display:none;">
 
 <script src="face-api.min.js"></script>
 
