--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -265,7 +265,7 @@
 
     
 
-        //tracksPoolWithValence.sort(compareSongs);
+        tracksPoolWithValence.sort(compareSongs);
 
     }
    // face();
