--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -58,8 +58,8 @@
 
 
     <div id="step2">
-
-        <button class="roundButton" onclick="startVideo()" id="webcamButton">Next, enable webcam</button>
+        <p>Successfully accessed Spotify.</p>
+        <button class="roundButton" onclick="startVideo()" id="webcamButton">Click to enable webcam</button>
         <div id="step2point1">
             <div id="videoPlusSnapButton">
                 <div id="videoContainer">
