--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -13,6 +13,9 @@
 
 <div id="intro">
     <div class="introTextDiv" style="margin-top:30vh;">
+        <h1>This is a work in progress!!.</h1>
+    </div>
+    <div class="introTextDiv" style="margin-top:100vh;">
         <h1>We like to listen to music that matches our mood.</h1>
     </div>
     <div class="introTextDiv" style="margin-top:100vh;">
