--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -91,7 +91,7 @@
 
 
 
-<img id="myImg" src="sad.jpeg" width="100px" style="display:none;">
+<img id="myImg" src="clickSnapPicture.png" width="100px" style="display:none;">
 
 <script src="face-api.min.js"></script>
 
