--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -176,7 +176,7 @@ if (isMobile) {
                 // To implement: add to tracksPool top 5 songs of all the top artists
             //});
 
-
+            console.log("terms length is " + terms.length);
             for (i=0;i<terms.length;i++) { //Loop through short term, medium term, and long term top songs
                 await getTopTracks(accessToken,49*i,terms[i]).then((value) => {
                     for (j=0;j<50;j++) {
