--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -207,9 +207,10 @@ if (isMobile) {
                     console.log("got top tracks");
                     console.log(value);
                     for (j=0;j<50;j++) {
-                        //if (!value[j] in tracksPool) {
+                        const alreadyInTracksPool = tracksPool.some(el => el.id === value[j].id);
+                        if (!alreadyInTracksPool) {
                             tracksPool.push(value[j]);
-                       // }
+                       }
                     }
                 });
             }
