--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -222,7 +222,7 @@ if (isMobile) {
 
         
         tracksPoolWithValence = [];
-
+        console.log("I'm about to do the trackspool with valence stuff, hopefully this is happening at right time");
         for (j=0;j<tracksPool.length/50;j++) {
             comSepList = "";
             for (i=j*50; i<50+j*50; i++) {
