--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -226,6 +226,7 @@ if (isMobile) {
         for (j=0;j<tracksPool.length/50;j++) {
             comSepList = "";
             for (i=j*50; i<50+j*50; i++) {
+                console.log("gonna get trackspool at " + i);
                 comSepList += (i%50 == 0) ? tracksPool[i].id : "," + tracksPool[i].id; //append id to comSepList, with a comma preceding it if it's not the first element
             }
             audFeatures = await getAudioFeatures(accessToken,comSepList);
