--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -225,7 +225,7 @@ if (isMobile) {
         console.log("I'm about to do the trackspool with valence stuff, hopefully this is happening at right time");
         for (j=0;j<tracksPool.length/50;j++) {
             comSepList = "";
-            for (i=j*50; i<50+j*50; i++) {
+            for (i=j*50; i<Math.min(j*50+50,tracksPool.length); i++) {
                 console.log("gonna get trackspool at " + i);
                 comSepList += (i%50 == 0) ? tracksPool[i].id : "," + tracksPool[i].id; //append id to comSepList, with a comma preceding it if it's not the first element
             }
