--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -343,7 +343,7 @@ if (isMobile) {
             document.getElementsByClassName("songrec")[i].innerHTML = "<img src='" + tracksPool[i].album.images[0].url + "' width='150px'><h6>" + tracksPool[i].name + "</h6>";
         }
         
-        previewUrlNull = True;
+        previewUrlNull = true;
         i = 0;
         while (previewUrlNull) {
             if (tracksPool[0].preview_url != null) {
