--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="introTextDiv" style="margin-top:5vh;margin-bottom:30vh;">
-        <h1>Then, based on songs and artists you like, we'll make a playlist that best matches your detected mood.</h1>
+        <h1>Then, based on songs and artists you like, we'll make a playlist that matches your detected mood.</h1>
     </div>
 
 
