--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -59,7 +59,7 @@
 
 
     <div id="step2">
-        <h2 id="loading">Loading...</h2>
+        <p id="loading">Loading...</p>
         <p id="sucesssaccess">Successfully accessed Spotify.</p>
         <button class="roundButton" onclick="startVideo()" id="webcamButton">Click to enable webcam</button>
         <div id="step2point1">
