--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -375,7 +375,7 @@ if (isMobile) {
         tracksPool.sort(compareSongs);
 
         for (i=0;i<15;i++) {
-            document.getElementsByClassName("songrec")[i].innerHTML = "<img src='" + tracksPool[i].album.images[0].url + "' width='150px'><h6 style='margin:0'>" + tracksPool[i].name + "</h6>";
+            //document.getElementsByClassName("songrec")[i].innerHTML = "<img src='" + tracksPool[i].album.images[0].url + "' width='150px'><h6 style='margin:0'>" + tracksPool[i].name + "</h6>";
         }
         
         previewUrlNull = true;
