--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -229,6 +229,7 @@ if (isMobile) {
 
             document.getElementById("step1").style.visibility = "hidden";
             document.getElementById("postIntro").scrollIntoView();
+            document.getElementById("intro").scrollTop = document.getElementById("intro").scrollHeight;
 
 
 
