--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -56,7 +56,7 @@
     <button id="connectspotButton" activeColor="#00ff00" class="roundButton" onclick="generateCodeChallenge(64)">Connect to Spotify to get started</button>
     </div>
 
-    <p id="loading" style="text-align:center">Loading...</p>
+    <h1 id="loading" style="text-align:center">Loading...</h1>
 
 
     <div id="step2">
