--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -295,7 +295,7 @@ if (isMobile) {
         musicGotten = true;
         console.log("music obtained");
 
-        document.getElementById("loading").style.visibility = "hidden";
+        document.getElementById("loading").style.display = "none";
         document.getElementById("step2").style.visibility = "visible";
 
            
