--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -245,6 +245,7 @@ if (isMobile) {
 
 
     async function getMusic(accessToken) {
+        document.getElementById("loading").style.display="block";
         
 
         tracksPool = [];
