--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -361,6 +361,8 @@ if (isMobile) {
             happinessCalcedWord = "very happy";
         }
 
+        happinessCalced = Math.min(happinessCalced,0.92)
+
         document.getElementById("happiness").innerText = happinessCalcedWord;
 
 
