--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -215,7 +215,7 @@ if (isMobile) {
 
        
 
-            document.getElementById("step1").style.visibility = "hidden";
+            document.getElementById("step1").display = "none";
             document.getElementById("postIntro").scrollIntoView();
             document.getElementById("intro").scrollTop = document.getElementById("intro").scrollHeight;
 
