--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -16,6 +16,9 @@
     <div class="introTextDiv" style="margin-top:30vh;">
         <h1>We like to listen to music that matches our mood.</h1>
     </div>
+    <div class="introTextDiv" style="margin-top:5vh;">
+        <h4>Scroll to continue ↓</h4>
+    </div>
     <div class="introTextDiv" style="margin-top:100vh;">
         <h1>But there's a problem:</h1>
     </div>
