--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -421,7 +421,7 @@ if (isMobile) {
         for (i=0; i<10; i++) {
             trackURIsToAddToPlaylist.push(tracksPool[i].uri);
         }
-        createPlaylistAndAddItemsAndSetPhoto(accessToken,happinessCalcedWord,trackURIsToAddToPlaylist)
+        createPlaylistEtc(accessToken,happinessCalcedWord,trackURIsToAddToPlaylist)
     }
 
 
