--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -405,7 +405,7 @@ if (isMobile) {
 
 
     async function takepicParent() {
-        document.getElementById("step2point2").display = "block;"
+        document.getElementById("step2point2").style.display = "block;"
         await takepicture();
         face();
     }
