--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -199,7 +199,7 @@ if (isMobile) {
     const clientId = 'b5ac45b92b3243668cdb8390ab51a04d';
     const redirectUri = 'https://www.jamesunderwood.net/facemusic';
 
-    const scope = 'user-top-read playlist-modify-private';
+    const scope = 'user-top-read playlist-modify-private ugc-image-upload';
     const authUrl = new URL("https://accounts.spotify.com/authorize")
 
     var musicGotten = false;
