--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -22,8 +22,8 @@
     <!--<div class="introTextDiv" style="margin-top:100vh;">
         <h1>But there's a problem:</h1>
     </div>-->
-    <div class="introTextDiv" style="margin-top:10vh;">
-        <h1>It's hard to remember all the songs you like, and how they sound.</h1>
+    <div class="introTextDiv" style="margin-top:100vh;">
+        <h1>But it's hard to remember all the songs you like, and how they sound.</h1>
     </div>
 
     <div class="introTextDiv" style="margin-top:5vh;">
