--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -269,7 +269,7 @@ if (isMobile) {
             for (k=0;k<terms.length;k++) { // Loop through short term, medium term, and long term top songs
                 await getTopTracks(accessToken,49*i,terms[k]).then((value) => {
                     for (j=0;j<50;j++) {
-                        const alreadyInTracksPool = tracksPool.some(el => el.id === value[j].id);
+                        const alreadyInTracksPool = tracksPool.some(el => el.id === value[j].id || (el.artists[0].name === value[j].artists[0].name && el.name === value[j].name)); //Make sure we don't have duplicate songs. Duplicates have same track ID, or both same name and same artist
                         if (!alreadyInTracksPool) {
                             tracksPool.push(value[j]);
                        }
