--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -405,6 +405,11 @@ if (isMobile) {
         
 
 
+        context.font = "28px Impact";
+        context.fillText("WHEN YOU'RE FEELING PRETTY NEUTRAL", 10, 50); 
+
+
+
 
 
     }
