--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -406,7 +406,8 @@ if (isMobile) {
 
 
         context.font = "28px Impact";
-        context.fillText("WHEN YOU'RE FEELING PRETTY NEUTRAL", 10, 50); 
+        context.fillText("WHEN YOU'RE FEELING SLIGHTLY HAPPY", 10, 50); 
+        context.fillText("SO YOU LISTEN TO CAR SEAT HEADREST", 10, 350); 
 
 
 
