--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -407,7 +407,7 @@ if (isMobile) {
 
         context.font = "28px Impact";
         context.fillStyle = "#FFFFFF";
-        context.fillText("WHEN YOU'RE FEELING SLIGHTLY HAPPY", 10, 50); 
+        context.fillText("WHEN YOU'RE FEELING " + happinessCalcedWord.toUpperCase(), 10, 50); 
         context.fillText("SO YOU LISTEN TO " + tracksPool[0].artists[0].name.toUpperCase(), 10, 350); 
 
 
