--- a/facemusic/reacttest.html
+++ b/facemusic/reacttest.html
@@ -16,7 +16,7 @@
 <body>
   <div id="root"></div>
 
-<script type="module">
+<script type="text/babel">
 
 import { reactstep1 } from './reactstep1.js';
 
