--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -41,7 +41,7 @@
         let code = urlParams.get("code");
         let codeVerifier = localStorage.getItem('code_verifier');
         getToken(code).then((value) => {
-            window.location.href = "https://www.jamesunderwood.net/facemusic";
+            window.location.href = "https://www.jamesunderwood.net/facemusic/react_main.html";
         });
     }
 
@@ -55,7 +55,11 @@
   curState = localStorage.getItem("curState");
 
   if (curState == 0) {
-    toDisplay = (<><Reactintro /><Reactstep1 /></>);
+    toDisplay = (
+      <>
+      <Reactintro /><Reactstep1 />
+      </>
+      );
   } else {
     toDisplay = <p></p>;
   }
