--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -57,7 +57,8 @@
   if (curState == 0) {
     toDisplay = (
       <>
-      <Reactintro /><Reactstep1 />
+      <Reactintro />
+      <Reactstep1 />
       </>
       );
   } else {
