--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -56,10 +56,9 @@
 
   if (curState == 0) {
     toDisplay = (
-      <>
-      <Reactintro />
+      <React.Fragment>      <Reactintro />
       <Reactstep1 />
-      </>
+      </React.Fragment>
       );
   } else {
     toDisplay = <p></p>;
