--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -52,7 +52,7 @@
 
 
 
-  curState = localStorage.getItem("curState");
+  var curState = localStorage.getItem("curState");
 
   if (curState == 0) {
     toDisplay = (
