--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -72,7 +72,7 @@ var toDisplay = <p></p>;
   const App = () => {
     return (
       <div>
-        <Reactintro />
+        // <Reactintro />
         <div id="postIntro">
             { toDisplay }
         </div>
