--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -62,7 +62,7 @@ var toDisplay = <p></p>;
 
   if (curState == 0) {
     toDisplay = (
-      <React.Fragment>      <Reactintro />
+      <React.Fragment>     
       <Reactstep1 />
       </React.Fragment>
       );
@@ -77,7 +77,7 @@ var toDisplay = <p></p>;
   const App = () => {
     return (
       <div>
-
+        <Reactintro />
         <div id="postIntro">
             { toDisplay }
         </div>
