--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -31,6 +31,10 @@
 
 <script type="text/babel">
 
+const clientId = 'b5ac45b92b3243668cdb8390ab51a04d';
+const redirectUri = 'https://www.jamesunderwood.net/facemusic/react_main.html';
+
+
 
   // Your React code goes here
 
