--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -34,6 +34,12 @@
 const clientId = 'b5ac45b92b3243668cdb8390ab51a04d';
 const redirectUri = 'https://www.jamesunderwood.net/facemusic/react_main.html';
 
+const scope = 'user-top-read playlist-modify-private ugc-image-upload';
+const authUrl = new URL("https://accounts.spotify.com/authorize")
+
+var musicGotten = false;
+
+
 
 
   // Your React code goes here
