--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -31,6 +31,9 @@
 
 <script type="text/babel">
 
+
+const accessToken = localStorage.getItem("access_token");
+
 const clientId = 'b5ac45b92b3243668cdb8390ab51a04d';
 const redirectUri = 'https://www.jamesunderwood.net/facemusic/react_main.html';
 
@@ -76,7 +79,7 @@ var toDisplay = <p></p>;
       <Reactstep1 />
       </React.Fragment>
       );
-  } else if (curstate == 1) {
+  } else if (curState == 1) {
     toDisplay = (
       <React.Fragment>     
       <Reactstep2 />
@@ -110,7 +113,6 @@ var toDisplay = <p></p>;
 
 <script>
 
-let accessToken = localStorage.getItem("access_token");
 
 
 </script>
