--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -22,9 +22,9 @@
 <script type="text/babel" src="react_step1.js"></script>
 
 <!-- FUNCTIONAL SCRIPTS -->
-<script src="face-api.min.js"></script>
+<!-- <script src="face-api.min.js"></script> -->
 <script src="spotify_auth.js"></script>
-<script src="webcam.js"></script>
+<!-- <script src="webcam.js"></script> -->
 
 
 
