--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -20,6 +20,7 @@
 <!-- REACT COMPONENTS -->
 <script type="text/babel" src="react_intro.js"></script>
 <script type="text/babel" src="react_step1.js"></script>
+<script type="text/babel" src="react_step2.js"></script>
 
 <!-- FUNCTIONAL SCRIPTS -->
 <!-- <script src="face-api.min.js"></script> -->
