--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -25,7 +25,7 @@
 <!-- FUNCTIONAL SCRIPTS -->
 <!-- <script src="face-api.min.js"></script> -->
 <script src="spotify_auth.js"></script>
-<!-- <script src="webcam.js"></script> -->
+ <script src="webcam.js"></script>
 
 
 
@@ -51,6 +51,7 @@ var musicGotten = false;
 if (!localStorage.getItem("curState")) {
   localStorage.setItem("curState",0);
 }
+
 
   var curState = localStorage.getItem("curState");
 var toDisplay = <p></p>;
