--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -21,11 +21,15 @@
 <script type="text/babel" src="react_intro.js"></script>
 <script type="text/babel" src="react_step1.js"></script>
 <script type="text/babel" src="react_step2.js"></script>
+<script type="text/babel" src="react_step2point1.js"></script>
+<script type="text/babel" src="react_step2point2.js"></script>
+
+
 
 <!-- FUNCTIONAL SCRIPTS -->
 <!-- <script src="face-api.min.js"></script> -->
 <script src="spotify_auth.js"></script>
- <script src="webcam.js"></script>
+ <script src="react_webcam.js"></script>
 
 
 
