--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -62,7 +62,7 @@ var toDisplay = <p></p>;
 
   const urlParams = new URLSearchParams(window.location.search);
     if (urlParams.get("code") && !localStorage.getItem("access_token")) { //Back from spotify
-        localStorage.setItem("curState",1)
+        localStorage.setItem("curState",1);
         let code = urlParams.get("code");
         let codeVerifier = localStorage.getItem('code_verifier');
         getToken(code).then((value) => {
@@ -85,7 +85,7 @@ var toDisplay = <p></p>;
       <Reactstep1 />
       </React.Fragment>
       );
-  } else if (curState == 1) {
+  } else {
     toDisplay = (
       <React.Fragment>     
       <Reactstep2 />
