--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -118,7 +118,7 @@ var toDisplay = <p></p>;
 
 
 function setState(num) {
-  localStorage.setState(num);
+  localStorage.setItem("curState",num);
   curState = num;
 }
 
